Fix broken links.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>We're Sorry:(</h1>
-    <h2>The current page is undergoing renovations. If you would like to see some of Daniel Laurences other projects please click on one of the links below:</h2>
-    <ul a href="www.daniellaurence.com/neighborhood_map">Udacity's Neighborhood Map Project</ul>
-    <ul a href="www.daniellaurence.com/beer">Udacity's Item Catalog Project</ul>
-    <ul a href="www.daniellaurence.com/portfolio">Udacity's Portfolio Project</ul>
-    <ul a href="www.daniellaurence.com/movie_trailers">Udacity's Movie Trailer Website Project</ul>
+    <h2>The current page is undergoing renovations. If you would like to see some of Daniel Laurence's other projects please click on one of the links below:</h2>
+    <ul>
+        <li> <a href="/neighborhood_map">Udacity's Neighborhood Map Project</a> </li>
+        <li> <a href="/portfolio">Udacity's Portfolio Project</a> </li>
+    </ul>
 </body>
 </html>
