Add item_catalog to list of visible projects.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li> <a href="/neighborhood_map">Udacity's Neighborhood Map Project</a> </li>
         <li> <a href="/portfolio">Udacity's Portfolio Project</a> </li>
+        <li> <a href="/item_catalog">Udacity's Item Catalog Project</a> </li>
     </ul>
 </body>
 </html>
