--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li> <a href="/neighborhood_map">Udacity's Neighborhood Map Project</a> </li>
         <li> <a href="/portfolio">Udacity's Portfolio Project</a> </li>
-        <li> <a href="/item_catalog">Udacity's Item Catalog Project</a> </li>
+        <li> <a href="http://beers.daniellaurence.com/">Udacity's Item Catalog Project</a> </li>
     </ul>
 </body>
 </html>
